docs/v8.1/packages_api/runtime/backendsrv.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "BackendSrv"
keywords = ["grafana","documentation","sdk","@grafana/runtime"]
type = "docs"
disable_edit_link = true
+++

## BackendSrv interface

Used to communicate via http(s) to a remote backend such as the Grafana backend, a datasource etc. The BackendSrv is using the [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) under the hood to handle all the communication.

The request function can be used to perform a remote call by specifying a [BackendSrvRequest]({{< relref "../runtime/backendsrvrequest.md" >}})<!-- -->. To make the BackendSrv a bit easier to use we have added a couple of shorthand functions that will use default values executing the request.

<b>Signature</b>

```typescript
export interface BackendSrv 
```
<b>Import</b>

```typescript
import { BackendSrv } from '@grafana/runtime';
```

## Remarks

By default, Grafana displays an error message alert if the remote call fails. To prevent this from happening `showErrorAlert = true` on the options object.

<b>Methods</b>

|  Method | Description |
|  --- | --- |
|  [datasourceRequest(options)](#datasourcerequest-method) |  |
|  [delete(url)](#delete-method) |  |
|  [fetch(options)](#fetch-method) | Observable http request interface |
|  [get(url, params, requestId)](#get-method) |  |
|  [patch(url, data)](#patch-method) |  |
|  [post(url, data)](#post-method) |  |
|  [put(url, data)](#put-method) |  |
|  [request(options)](#request-method) |  |

### datasourceRequest method

<b>Signature</b>

```typescript
datasourceRequest<T = any>(options: BackendSrvRequest): Promise<FetchResponse<T>>;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  options | <code>BackendSrvRequest</code> |  |

<b>Returns:</b>

`Promise<FetchResponse<T>>`

### delete method

<b>Signature</b>

```typescript
delete(url: string): Promise<any>;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  url | <code>string</code> |  |

<b>Returns:</b>

`Promise<any>`

### fetch method

Observable http request interface

<b>Signature</b>

```typescript
fetch<T>(options: BackendSrvRequest): Observable<FetchResponse<T>>;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  options | <code>BackendSrvRequest</code> |  |

<b>Returns:</b>

`Observable<FetchResponse<T>>`

### get method

<b>Signature</b>

```typescript
get(url: string, params?: any, requestId?: string): Promise<any>;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  url | <code>string</code> |  |
|  params | <code>any</code> |  |
|  requestId | <code>string</code> |  |

<b>Returns:</b>

`Promise<any>`

### patch method

<b>Signature</b>

```typescript
patch(url: string, data?: any): Promise<any>;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  url | <code>string</code> |  |
|  data | <code>any</code> |  |

<b>Returns:</b>

`Promise<any>`

### post method

<b>Signature</b>

```typescript
post(url: string, data?: any): Promise<any>;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  url | <code>string</code> |  |
|  data | <code>any</code> |  |

<b>Returns:</b>

`Promise<any>`

### put method

<b>Signature</b>

```typescript
put(url: string, data?: any): Promise<any>;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  url | <code>string</code> |  |
|  data | <code>any</code> |  |

<b>Returns:</b>

`Promise<any>`

### request method

<b>Signature</b>

```typescript
request(options: BackendSrvRequest): Promise<any>;
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  options | <code>BackendSrvRequest</code> |  |

<b>Returns:</b>

`Promise<any>`

